@@ -1,16 +1,17 @@
 package view.Commands;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public enum SignUpMenuCommands {
-    CREATEUSER (new ArrayList<>(List.of("user\\s+create" , "\\s+-u\\s+(?<username>\".*\"|\\S*)" , "\\s+-p\\s+(?<password>\\S*)\\s*(?<passconfirm>\\S*)", "\\s+-email\\s+(?<email>\\S*)" , "\\s+-n\\s+(?<nickname>\".*\"|\\S*)" , "(\\s+-s\\s+(?<slogan>\".*\"|\\S*))?"))) ,
-    ANSWERSECURITYQUESTION (new ArrayList<>(List.of("question\\s+pick" , "\\s+-q\\s+(?<questionnumber>\\d)" , "\\s+-a\\s+(?<answer>\".+\"|\\S+)" , "\\s+-c\\s+(?<answerconfirm>\".+\"|\\S+)")))
+    CREATEUSER (new ArrayList<>(Arrays.asList("user\\s+create" , "\\s+-u\\s+(?<username>\".*\"|\\S*)" , "\\s+-p\\s+(?<password>\\S*)\\s*(?<passconfirm>\\S*)", "\\s+-email\\s+(?<email>\\S*)" , "\\s+-n\\s+(?<nickname>\".*\"|\\S*)" , "(\\s+-s\\s+(?<slogan>\".*\"|\\S*))?"))) ,
+    ANSWERSECURITYQUESTION (new ArrayList<>(Arrays.asList("question\\s+pick" , "\\s+-q\\s+(?<questionnumber>\\d)" , "\\s+-a\\s+(?<answer>\".+\"|\\S+)" , "\\s+-c\\s+(?<answerconfirm>\".+\"|\\S+)")))
     ;
 
-    private ArrayList<String> regexs;
+    private final ArrayList<String> regexs;
 
     SignUpMenuCommands (ArrayList<String> regexs){
         this.regexs = regexs;
